# hash_matching

./: CMakeLists.txt  README.md  manifest.xml  package.xml
include/: LSH_functions.h  hash.h  hash_matching_base.h  opencv_utils.h  stereo_properties.h  test_base.h  utils.h
launch/: demo.launch  test_pool_survey.launch
scripts/: draw_hyperplanes.py  plot_directory.py  plot_num_proj.py  plot_results.py  viewer.py
src/: LSH_functions.cpp  hash.cpp  hash_matching_base.cpp  hash_matching_node.cpp  stereo_properties.cpp  test_base.cpp  test_node.cpp
